# RcppChoose

./: .gitignore  Makefile  README.Rmd  README.md
RcppChoose/rpackage/: DESCRIPTION  LICENSE  configure.ac
RcppChoose/rpackage/R/: package.R
RcppChoose/rpackage/notes/: Makevars-include
libChoose/: Makefile  choose.cpp  choose.hpp
rpackage/: .Rbuildignore  .gitignore  README.Rmd  README.md  clean.sh  configure
rpkg/: .gitignore  clean.sh  configure.ac
rpkg/RcppChoose/: LICENSE.md  NAMESPACE
rpkg/RcppChoose/R/: RcppExports.R
rpkg/RcppChoose/rpackage/: .Rbuildignore  clean.sh
rpkg/RcppChoose/rpackage/src/: Makevars.in  RcppExports.cpp
rpkg/RcppChoose/src/: code.cpp
